<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/text_view"
        android:text="@string/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_on"
        android:layout_below="@id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_on"
        android:onClick="onClickOn" />

    <Button
        android:id="@+id/button_scan"
        android:layout_below="@id/button_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:onClick="onClickScan" />

    <Button
        android:id="@+id/button_paired"
        android:layout_toRightOf="@id/button_scan"
        android:layout_alignBottom="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pair"
        android:onClick="onClickPair" />

    <Button
        android:layout_alignBottom="@+id/button_on"
        android:layout_toRightOf="@+id/button_on"
        android:paddingLeft="5dp"
        android:text="@string/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickWrite"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_scan">

    </ListView>

</RelativeLayout>
